
 - (expected) clean-up of libusb API variants support [#300 and follow-ups]

 - (expected) CI automation for coding style

 - (expected) CI automation for driver flags and variables to be certainly
   documented, handled in augeas lenses, nutconf classes, etc.

 - (expected) CI automation for use of data points in drivers that conform
   to patterns defined in link:docs/nut-names.txt[]

 - (expected) Bug fixes for fallout possible due to "fightwarn" effort in 2.8.0+

 - Fix fallout of development in NUT v2.8.0 and/or v2.8.1 and/or v2.8.2 and/or
   v2.8.3:
   * Fixed a regression in recipes of NUT v2.8.3 release (as compared to
     v2.8.2), where `configure --with-docs=all` no longer failed a run
     of the `configure` script when some of the required rendering tools
     were not in fact available. [#2842, fixed by #2921]
   * A change in `Makefile.am` recipes to evaluate some driver names in the
     `DRIVERLIST` variables inspected by `configure` script, rather than
     having all their names hard-coded like before, led to inability to
     `configure --with-drivers=dummy-ups`. [#2825, #2927, fixed by PR #2929]

 - common code:
   * Revised common `writepid()` to use `altpidpath()` as location for the
     PID file creation, if the default `rootpidpath()` is not accessible
     (e.g. daemon was not initially started as `root`). Likewise updated
     short PID file based signal sending to consult both locations. [#1717]
   * Refactored NUT "common" sources to reference `nut_version.h` macros from
     a smaller C source file, to minimize the compilation unit size impacted
     by development iterations. [issue #2097]
   * Common code hardening: added sanity-checking for dynamically constructed
     or selected formatting strings with variable-argument list methods
     (typically used with log printing, `dstate` setting, etc.) [#2450]
   * Refactored repetitive implementations of `inet_ntopSS()` (nee