@@ -1,4 +1,4 @@
-personal_ws-1.1 en 3494 utf-8
+personal_ws-1.1 en 3495 utf-8
 AAC
 AAS
 ABI
@@ -488,6 +488,7 @@ HOWTO
 HPE
 HPUX
 HREF
+HU
 HUPCL
 HUZKVEIkHnC
 HV
